--- a/package.json
+++ b/package.json
@@ -1,84 +1,42 @@
 {
-  "name": "app",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "rlws2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
   "scripts": {
-    "clean": "rimraf node_modules doc dist && npm cache clean",
-    "clean-install": "npm run clean && npm install",
-    "clean-start": "npm run clean-install && npm start",
-    "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dev-server --inline --progress --port 8080",
-    "webdriver-update": "webdriver-manager update",
-    "webdriver-start": "webdriver-manager start",
-    "lint": "tslint --force \"src/**/*.ts\"",
-    "e2e": "protractor",
-    "e2e-live": "protractor --elementExplorer",
-    "pretest": "npm run lint",
-    "test": "karma start",
-    "test-watch": "karma start --no-single-run --auto-watch",
-    "ci": "npm run e2e && npm run test",
-    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
-    "start": "npm run server",
-    "postinstall": "npm run webdriver-update && typings install"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "production": "webpack -p --progress --config ./webpack.prod.config.js",
+    "prod": "webpack -p --progress --config ./webpack.prod.config.js",
+    "watch": "webpack -w"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "es6-promise": "^3.2.1",
+    "lodash": "^4.15.0",
+    "normalize.scss": "^0.1.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.4.0",
-    "autoprefixer": "^6.3.2",
-    "codelyzer": "0.0.26",
-    "copy-webpack-plugin": "^3.0.0",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.0",
-    "html-webpack-plugin": "^2.8.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.3.4",
-    "jasmine-spec-reporter": "^2.4.0",
-    "json-loader": "^0.5.3",
-    "karma": "1.1.2",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.3",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-remap-istanbul": "0.1.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.7.0",
-    "node-sass": "^3.4.2",
-    "null-loader": "0.1.1",
-    "phantomjs-prebuilt": "^2.1.4",
-    "postcss-loader": "^0.9.1",
-    "protractor": "^3.1.1",
-    "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.6.4",
-    "rimraf": "^2.5.1",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.8.0",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.10.1",
+    "precss": "^1.4.0",
     "sass-loader": "^4.0.0",
-    "shelljs": "^0.7.0",
-    "style-loader": "^0.13.0",
-    "ts-helpers": "^1.1.1",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.4.0",
-    "tslint-loader": "^2.1.0",
-    "typedoc": "^0.4.4",
-    "typescript": "^1.8.0",
-    "typings": "^1.0.4",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "strip-loader": "^0.1.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
   }
 }
