--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "normalize.scss": "^0.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise-middleware": "^4.0.0",
+    "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
