--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^15.3.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.0",
+    "sizzle": "^2.3.3",
+    "velocity-animate": "^1.2.3",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
