--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp": "^3.9.1",
     "gulp-flatten": "^0.3.1",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.10.1",
