--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^15.3.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.0",
+    "react-slick": "^0.14.5",
     "sizzle": "^2.3.3",
+    "slick-carousel": "^1.6.0",
     "velocity-animate": "^1.2.3",
     "whatwg-fetch": "^1.0.0"
   },
